# rustytorch

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  debug_gradient.rs  phase1-checklist-roadmap.md  test_3d_quick.rs
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
Roadmap/: phase1-checklist-roadmap.md  phase2-roadmap.md
examples/: autograd_basic.rs  functional_api.rs  linear_network.rs  neuronal_network.rs  new_reductions.rs  nn_basic.rs  tensor_basic.rs  test_3d_matmul.rs
rustytorch_autograd/: Cargo.toml
rustytorch_autograd/src/: anomaly_detection.rs  cycle_detection.rs  functional.rs  functional_complex.rs  graph_manager.rs  lib.rs  operations.rs  optimized_backward.rs  performance_optimizations.rs
rustytorch_autograd/tests/: activations.rs  basic_operations.rs  comprehensive_validation.rs  gradient_validation.rs  higher_order_gradients.rs  integration_tests.rs  mathematical_functions.rs  mod.rs  simple_gradient_check.rs
rustytorch_backends/: Cargo.toml
rustytorch_backends/src/: lib.rs
rustytorch_core/: Cargo.toml
rustytorch_core/src/: device_ext.rs  errors.rs  lib.rs  main.rs  tests.rs  traits.rs  types.rs
rustytorch_data/: Cargo.toml
rustytorch_examples/: Cargo.toml
rustytorch_examples/src/: advanced_linalg.rs  autograd_basic_demo.rs  debug_gradient.rs  decompositions_demo.rs  device_demo.rs  f16_demo.rs  higher_order_gradients_demo.rs  initializers_demo.rs  main.rs  memory_pool_demo.rs  neural_network_demo.rs  new_reductions.rs  optimization_demo.rs  padding_demo.rs  pow_test.rs  random_generators_demo.rs  test_3d_support.rs
rustytorch_nn/: Cargo.toml
rustytorch_nn/src/: activations.rs  lib.rs  nn_errors.rs
rustytorch_optim/: Cargo.toml
rustytorch_tensor/: Cargo.toml
rustytorch_tensor/benches/: tensor_benchmarks.rs
rustytorch_tensor/src/: activations.rs  broadcastings.rs  decompositions.rs  f16_support.rs  indexing.rs  initializers.rs  lib.rs  linalg.rs  memory_pool.rs  numeric_ops.rs  padding.rs  random_generators.rs  reductions.rs  simd_ops.rs  storage.rs  tensor_comparison.rs  tensor_errors.rs  tensor_ops.rs  tensor_optims.rs  tensor_view.rs  type_ops.rs
rustytorch_tensor/tests/: integration_tests.rs  stress_tests.rs
rustytorch_text/: Cargo.toml
rustytorch_utils/: Cargo.toml
rustytorch_utils/src/: lib.rs
rustytorch_viz/: Cargo.toml
rustytorch_viz/src/: lib.rs
