[package]
name = "rustytorch_nn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RustyTorch Neural Network Module inpired by PyTorch"




#
## Dependances communes du workspace
[dependencies]
rand_distr = "0.4.3"
#rayon.workspace = true
#ndarray.workspace = true
#thiserror.workspace = true
#log.workspace = true
#num-traits.workspace = true
#bytemuck.workspace = true
#serde.workspace = true
#cfg-if.workspace = true


rustytorch_core= { path = "../rustytorch_core" }
rustytorch_autograd= { path = "../rustytorch_autograd" }
rustytorch_backends= { path = "../rustytorch_backends" }
rustytorch_data= { path = "../rustytorch_data" }
rustytorch_optim= { path = "../rustytorch_optim" }
rustytorch_tensor= { path = "../rustytorch_tensor" }
rustytorch_text= { path = "../rustytorch_text" }
rustytorch_utils= { path = "../rustytorch_utils" }
rand = "0.9.0"





### Caractéristiques optionnelles
##[features]
##default = ["cpu"]
##cpu = []
##cuda = ["dep:cuda-runtime", "dep:cuda-sys"]
##mkl = ["dep:intel-mkl-src"]
#
#
### Dépendances optionnelles pour les features
##cuda-runtime = { version = "0.5", optional = true }
##cuda-sys = { version = "0.2", optional = true }
##intel-mkl-src = { version = "0.8", optional = true }
#
##Dépendances de développement uniquement
#[dev-dependencies]
#criterion.workspace = true
#proptest.workspace = true
#
