#cargo.toml de rustytorch_tensor
[package]
name = "rustytorch_tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true




[dependencies]
# Dépendances externes
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
ndarray.workspace = true
thiserror.workspace = true
log.workspace = true
num-traits.workspace = true
num-complex.workspace = true
bytemuck.workspace = true
half.workspace = true
serde.workspace = true
cfg-if.workspace = true
lazy_static.workspace = true

# Dépendance interne vers rustytorch_core
rustytorch_core = { path = "../rustytorch_core" }
bumpalo = "3.17.0"





#
#
### Caractéristiques optionnelles
##[features]
##default = ["cpu"]
##cpu = []
##cuda = ["dep:cuda-runtime", "dep:cuda-sys"]
##mkl = ["dep:intel-mkl-src"]
#
#
### Dépendances optionnelles pour les features
##cuda-runtime = { version = "0.5", optional = true }
##cuda-sys = { version = "0.2", optional = true }
##intel-mkl-src = { version = "0.8", optional = true }
#
# Dépendances de développement uniquement
[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "tensor_benchmarks"
harness = false
