[package]
name = "rustytorch_viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Dépendances externes
rand.workspace = true
rayon.workspace = true
ndarray.workspace = true
thiserror.workspace = true
log.workspace = true
num-traits.workspace = true
bytemuck.workspace = true
serde.workspace = true
cfg-if.workspace = true

# Dépendance interne vers rustytorch_core
rustytorch_core = { path = "../rustytorch_core" }
rustytorch_autograd = {path = "../rustytorch_autograd"}


[lints]
workspace = true
